# pilot-hdc-metadata

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: hdc-pipeline.yml
app/: __main__.py  api_registry.py  app_utils.py  config.py  logger.py  main.py
app/clients/: kafka_client.py
app/models/: base_models.py  models_attribute_templates.py  models_collections.py  models_favourites.py  models_items.py  models_lineage_provenance.py  sql_attribute_templates.py  sql_collections.py  sql_extended.py  sql_favourites.py  sql_items.py  sql_items_collections.py  sql_lineage.py  sql_provenance.py  sql_storage.py
app/routers/: router_exceptions.py  router_utils.py
migrations/: env.py
migrations/scripts/: create_metadata_db.sql  create_metadata_schema.sql  install_ltree.sql
migrations/versions/: 0a475ee40d8a_.py  15315557f1fd_update_column_archived_to_status.py  212e0e60c178_add_items_table.py  5df5e2987093_add_attribute_templates_table.py  5dfa86209d0f_fix_lineage_provenance_tables.py  6417f7affeb1_update_items_model.py  644ba6b47222_change_items_size_to_bigint.py  76ffd36326a3_add_time_columns_to_items_table.py  7bb14ddd2c05_add_upload_id_in_storage.py  b703f5750172_file_deletion.py  c12398f0647f_add_favourites_table.py  c9d07577d8d2_add_collections_tables.py  cad81b7e09aa_add_other_items_tables.py  (+3 more)
tests/: conftest.py  main.py  test_attribute_templates.py  test_collections.py  test_favourites.py  test_items.py  test_lineage_provenance.py  test_utils.py
(+18 files in other folders)
